delete old python prototype

--- a/README
+++ b/README
@@ -1,50 +1,4 @@
-Personal container in Python
---
+Personal container
+------------------
 
-Only works on MacOS X at the moment.
-
-Makefile targets:
-
-# build the support libraries (will download everything it needs)
-$ make all
-
-# run the main server (port 5985 by default)
-$ make run
-
-# do a single scan of the plugins directory
-$ make scan
-
-# cleanup intermediate build files
-$ make clean
-
---
-URL scheme (CRUD, so you can GET/POST/DELETE):
-
-/people/<uid>
-  GET person JSON information
-  POST create new person or update existing UID.
-  fields:
-    uid: string
-    meta: json dictionary of metadata
-    atts: attachments (pictures, etc)
-/svc/<ty>/<id>
-  GET service information
-  POST update or create new service
-  fields:
-    ty: string, type of service (e.g. email, twitter, facebook)
-    id: string, service identifier (e.g. anil@recoil.org, avsm)
-    co: string, uid of person associated with this service
-/att/<uid>
-  GET attachment body
-  POST updated attachments (mime-type HTTP header needed)
-  fields:
-    the database stores mime, size and the attachment itself as a blob
-/thing/<uid>
-  GET retrieve new thing by uid
-  POST update or create new thing
-  fields:
-    frm: list of services thing came from
-    to : list of services thing is addressed to
-    meta: json dictionary of metadata keys
-
---
+Only works on Google AppEngine at the moment.
